--- a/SaleManager.Web/Views/Shared/_Layout.cshtml
+++ b/SaleManager.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/knockout")
     @Scripts.Render("~/bundles/commonjs")
     <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.20/datatables.min.js"></script>
 </head>
