--- a/SaleManager.Web/Views/SellMarket/Index.cshtml
+++ b/SaleManager.Web/Views/SellMarket/Index.cshtml
@@ -7,31 +7,30 @@
 <link rel="stylesheet" href="@Url.Content("~/Content/" + controllerName + ".css")">
 <script src="@Url.Content("~/Scripts/" + controllerName + "/" + actionName + ".js")"></script>
 
-<div class="row">
+<div class="row" id="sell-market">
     <div class="col-lg-7">
         <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Barcode or Name" aria-label="username" aria-describedby="button-addon2" id="recomment-name">
+            <input data-bind="value: condition" type="text" class="form-control" placeholder="Barcode or Name" aria-label="username" aria-describedby="button-addon2">
             <div class="input-group-append">
                 <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fas fa-search-plus"></i></button>
             </div>
         </div>
 
         <!-- Nav tabs -->
-        <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#home">Hoá đơn 1111 <i class="far fa-times-circle"></i></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#menu1">Menu 1</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#menu2">Menu 2</a>
-            </li>
+        @*<button data-bind="click: addTab" type="button" class="btn btn-primary rounded-circle plus-tab float-right mr-4"><i class="fas fa-plus"></i></button>*@
+        <ul class="nav nav-tabs" role="tablist" data-bind="template: {name: 'bill-template', foreach: bills}">
         </ul>
+        <script type="text/html" id="bill-template">
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" data-bind="attr: { href: Href }, text: TabName, click: $parent.selectPlace">bill number<i class="far fa-times-circle"></i></a>
+            </li>
+        </script>
 
         <!-- Tab panes -->
-        <div class="tab-content">
-            <div id="home" class="container tab-pane active">
+        <div class="tab-content" data-bind="template: {name: 'bill-detail-template', foreach: bills, as: 'bill'}">
+        </div>
+        <script type="text/html" id="bill-detail-template">
+            <div data-bind="attr: { id: TabId }" class="container tab-pane active">
                 <form action="/" method="post">
                     <table class="table table-hover p-1">
                         <thead>
@@ -41,42 +40,26 @@
                                 <th class="d-inline-block col-4">Tên sản phẩm</th>
                                 <th class="d-inline-block col-2">Đơn giá</th>
                                 <th class="d-inline-block col-2">Số lượng</th>
-                                <th class="d-inline-block col-2">Thành tiền</th>
+                                <th class="d-inline-block col-2">Tổng</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody data-bind="foreach: Details">
                             <tr class="row m-0">
                                 <td class="d-inline-block col-1"><a href="#"><i class="far fa-trash-alt"></i></a></td>
-                                <td class="d-inline-block col-1"><span>1</span></td>
-                                <td class="d-inline-block col-4"><span>Mì Hảo Hảo chua cay</span></td>
-                                <td class="d-inline-block col-2" data-type="currency"><span>3000</span></td>
+                                <td class="d-inline-block col-1">1</td>
+                                <td class="d-inline-block col-4" data-bind="text: Name">product name</td>
+                                <td class="d-inline-block col-2" data-type="currency" data-bind="text: Price">0</td>
                                 <td class="d-inline-block col-2">
                                     <div class="row">
-                                        <span class="col-6 text-left justify-content-center align-self-center">5</span>
+                                        <span class="col-6 text-left justify-content-center align-self-center" data-bind="text: Quantity">0</span>
                                         <div class="d-flex flex-column justify-content-between">
                                             <span><i class="fas fa-chevron-up"></i></span>
                                             <span><i class="fas fa-chevron-down"></i></span>
                                         </div>
                                     </div>
                                 </td>
-                                <td class="d-inline-block col-2" data-type="currency">15000</td>
+                                <td class="d-inline-block col-2" data-type="currency" data-bind="text: Amount">0</td>
                             </tr>
-                            <tr>
-                                <td class="d-inline-block col-1"><a href="#"><i class="far fa-trash-alt"></i></a></td>
-                                <td class="d-inline-block col-1">2</td>
-                                <td class="d-inline-block col-4">Dầu ăn Simply 2l</td>
-                                <td class="d-inline-block col-2" data-type="currency">75000</td>
-                                <td class="d-inline-block col-2">
-                                    <div class="row">
-                                        <span class="col-6 text-left justify-content-center align-self-center">5</span>
-                                        <div class="d-flex flex-column justify-content-between">
-                                            <span><i class="fas fa-chevron-up"></i></span>
-                                            <span><i class="fas fa-chevron-down"></i></span>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="d-inline-block col-2" data-type="currency">75000</td>
-                            </tr>                            
                         </tbody>
                     </table>
                     <div class="total-money">
@@ -117,77 +100,37 @@
                     <button type="button" class="btn btn-secondary">Nhập lại</button>
                 </div>
             </div>
-            <div id="menu1" class="container tab-pane fade">
-                <br>
-                <h3>Menu 1</h3>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
-            <div id="menu2" class="container tab-pane fade">
-                <br>
-                <h3>Menu 2</h3>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-            </div>
-        </div>
+        </script>
+        @*<script type="text/html" id="bill-detail-product-template">
+            <tr class="row m-0">
+                <td class="d-inline-block col-1"><a href="#"><i class="far fa-trash-alt"></i></a></td>
+                <td class="d-inline-block col-1">1</td>
+                <td class="d-inline-block col-4" data-bind="text: Name">product name</td>
+                <td class="d-inline-block col-2" data-type="currency" data-bind="text: Price">0</td>
+                <td class="d-inline-block col-2">
+                    <div class="row">
+                        <span class="col-6 text-left justify-content-center align-self-center" data-bind="text: Quantity">0</span>
+                        <div class="d-flex flex-column justify-content-between">
+                            <span><i class="fas fa-chevron-up"></i></span>
+                            <span><i class="fas fa-chevron-down"></i></span>
+                        </div>
+                    </div>
+                </td>
+                <td class="d-inline-block col-2" data-type="currency" data-bind="text: Amount">0</td>
+            </tr>
+        </script>*@
     </div>
 
-    <div class="col-lg-5 row product-list">
+    <div class="col-lg-5 row product-list" data-bind="template: {name: 'product-template', foreach: products}"></div>        
+    <script type="text/html" id="product-template">
         <div class="card col-sm-6 col-md-4 col-lg-3 m-1 pt-2 pb-2">
             <span class="card-size rounded-circle border mx-auto">
                 <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top card-size" alt="...">
             </span>
-            <p class="card-text text-center mt-2">Dầu ăn simply 2l</p>
+            <p class="card-text text-center mt-2" data-bind="text: Name">product name</p>
             <button type="button" class="btn btn-primary"><i class="fas fa-shopping-basket"></i></button>
         </div>
-        <div class="card col-sm-6 col-md-4 col-lg-3 m-1 pt-2 pb-2">
-            <span class="card-size rounded-circle border mx-auto">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top card-size" alt="...">
-            </span>
-            <p class="card-text text-center mt-2">Dầu ăn simply 2l</p>
-            <button type="button" class="btn btn-primary"><i class="fas fa-shopping-basket"></i></button>
-        </div>
-        <div class="card col-sm-6 col-md-4 col-lg-3 m-1 pt-2 pb-2">
-            <span class="card-size rounded-circle border mx-auto">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top card-size" alt="...">
-            </span>
-            <p class="card-text text-center mt-2">Dầu ăn simply 2l</p>
-            <button type="button" class="btn btn-primary"><i class="fas fa-shopping-basket"></i></button>
-        </div>
-        <div class="card col-sm-6 col-md-4 col-lg-3 m-1 pt-2 pb-2">
-            <span class="card-size rounded-circle border mx-auto">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top card-size" alt="...">
-            </span>
-            <p class="card-text text-center mt-2">Dầu ăn simply 2l</p>
-            <button type="button" class="btn btn-primary"><i class="fas fa-shopping-basket"></i></button>
-        </div>
-        <div class="card col-sm-6 col-md-4 col-lg-3 m-1 pt-2 pb-2">
-            <span class="card-size rounded-circle border mx-auto">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top card-size" alt="...">
-            </span>
-            <p class="card-text text-center mt-2">Dầu ăn simply 2l</p>
-            <button type="button" class="btn btn-primary"><i class="fas fa-shopping-basket"></i></button>
-        </div>
-        <div class="card col-sm-6 col-md-4 col-lg-3 m-1 pt-2 pb-2">
-            <span class="card-size rounded-circle border mx-auto">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top card-size" alt="...">
-            </span>
-            <p class="card-text text-center mt-2">Dầu ăn simply 2l</p>
-            <button type="button" class="btn btn-primary"><i class="fas fa-shopping-basket"></i></button>
-        </div>
-        <div class="card col-sm-6 col-md-4 col-lg-3 m-1 pt-2 pb-2">
-            <span class="card-size rounded-circle border mx-auto">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top card-size" alt="...">
-            </span>
-            <p class="card-text text-center mt-2">Dầu ăn simply 2l</p>
-            <button type="button" class="btn btn-primary"><i class="fas fa-shopping-basket"></i></button>
-        </div>
-        <div class="card col-sm-6 col-md-4 col-lg-3 m-1 pt-2 pb-2">
-            <span class="card-size rounded-circle border mx-auto">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top card-size" alt="...">
-            </span>
-            <p class="card-text text-center mt-2">Dầu ăn simply 2l</p>
-            <button type="button" class="btn btn-primary"><i class="fas fa-shopping-basket"></i></button>
-        </div>
-    </div>
+    </script>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.4/js/tether.min.js"></script>
